# visu-baby-names-G

./: README.md  pyproject.toml
data/: bump_data.csv  departements.geojson  gender_data.csv  map_data.csv
notebooks/: baby_names_3_implementation.ipynb  baby_names_9_implementation.ipynb  baby_names_9_viz_group_G_.ipynb  week2_implementation.ipynb
